--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,5 @@ language: php
 php:
  - '7.1'
  
- script: phpunit --configuration tests/phpunit.xml
+ script: 
+   - phpunit --configuration tests/phpunit.xml
